build/log/idf_py_stdout_output_30241
[1/15] Performing build step for 'bootloader'
[1/1] cd /workspaces/TANK/build/bootloader/esp-idf/esptool_py && /opt/esp/python_env/idf5.1_py3.8_env/bin/python /opt/esp/idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /workspaces/TANK/build/bootloader/bootloader.bin
Bootloader binary size 0x68c0 bytes. 0x740 bytes (6%) free.
[2/15] No install step for 'bootloader'
[3/15] Completed 'bootloader'
[4/15] Building C object esp-idf/ps4/CMakeFiles/__idf_ps4.dir/src/ps4_parser.c.obj
[5/15] Building C object esp-idf/ps4/CMakeFiles/__idf_ps4.dir/src/ps4_spp.c.obj
/workspaces/TANK/components/ps4/src/ps4_spp.c: In function 'sppInit':
/workspaces/TANK/components/ps4/src/ps4_spp.c:61:3: warning: 'esp_spp_init' is deprecated: Please use esp_spp_enhanced_init [-Wdeprecated-declarations]
   61 |   if ((ret = esp_spp_init(ESP_SPP_MODE_CB)) != ESP_OK) {
      |   ^~
In file included from /workspaces/TANK/components/ps4/src/ps4_spp.c:6:
/opt/esp/idf/components/bt/host/bluedroid/api/include/api/esp_spp_api.h:287:11: note: declared here
  287 | esp_err_t esp_spp_init(esp_spp_mode_t mode) __attribute__((deprecated("Please use esp_spp_enhanced_init")));
      |           ^~~~~~~~~~~~
[6/15] Linking C static library esp-idf/ps4/libps4.a
[7/15] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/__/main.c.obj
[8/15] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/__/bluetooth_control.c.obj
[9/15] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/__/motor_control.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/__/motor_control.c.obj 
ccache /opt/esp/tools/xtensa-esp32-elf/esp-12.2.0_20250801/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1.7-1-g4b1ae715b8\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/workspaces/TANK/build/config -I/workspaces/TANK -I/opt/esp/idf/components/newlib/platform_include -I/opt/esp/idf/components/freertos/FreeRTOS-Kernel/include -I/opt/esp/idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/opt/esp/idf/components/freertos/esp_additions/include/freertos -I/opt/esp/idf/components/freertos/esp_additions/include -I/opt/esp/idf/components/freertos/esp_additions/arch/xtensa/include -I/opt/esp/idf/components/esp_hw_support/include -I/opt/esp/idf/components/esp_hw_support/include/soc -I/opt/esp/idf/components/esp_hw_support/include/soc/esp32 -I/opt/esp/idf/components/esp_hw_support/port/esp32/. -I/opt/esp/idf/components/heap/include -I/opt/esp/idf/components/log/include -I/opt/esp/idf/components/soc/include -I/opt/esp/idf/components/soc/esp32 -I/opt/esp/idf/components/soc/esp32/include -I/opt/esp/idf/components/hal/esp32/include -I/opt/esp/idf/components/hal/include -I/opt/esp/idf/components/hal/platform_port/include -I/opt/esp/idf/components/esp_rom/include -I/opt/esp/idf/components/esp_rom/include/esp32 -I/opt/esp/idf/components/esp_rom/esp32 -I/opt/esp/idf/components/esp_common/include -I/opt/esp/idf/components/esp_system/include -I/opt/esp/idf/components/esp_system/port/soc -I/opt/esp/idf/components/esp_system/port/include/private -I/opt/esp/idf/components/xtensa/include -I/opt/esp/idf/components/xtensa/esp32/include -I/opt/esp/idf/components/lwip/include -I/opt/esp/idf/components/lwip/include/apps -I/opt/esp/idf/components/lwip/include/apps/sntp -I/opt/esp/idf/components/lwip/lwip/src/include -I/opt/esp/idf/components/lwip/port/include -I/opt/esp/idf/components/lwip/port/freertos/include -I/opt/esp/idf/components/lwip/port/esp32xx/include -I/opt/esp/idf/components/lwip/port/esp32xx/include/arch -I/opt/esp/idf/components/nvs_flash/include -I/opt/esp/idf/components/esp_partition/include -I/opt/esp/idf/components/spi_flash/include -I/workspaces/TANK/components/ps4/src -I/opt/esp/idf/components/bt/include/esp32/include -I/opt/esp/idf/components/bt/common/osi/include -I/opt/esp/idf/components/bt/common/api/include/api -I/opt/esp/idf/components/bt/common/btc/profile/esp/blufi/include -I/opt/esp/idf/components/bt/common/btc/profile/esp/include -I/opt/esp/idf/components/bt/common/hci_log/include -I/opt/esp/idf/components/bt/common/ble_log/include -I/opt/esp/idf/components/bt/host/bluedroid/api/include/api -I/opt/esp/idf/components/bt/common/tinycrypt/include -I/opt/esp/idf/components/bt/common/tinycrypt/port -I/opt/esp/idf/components/esp_timer/include -I/opt/esp/idf/components/esp_wifi/include -I/opt/esp/idf/components/esp_wifi/wifi_apps/include -I/opt/esp/idf/components/esp_event/include -I/opt/esp/idf/components/esp_phy/include -I/opt/esp/idf/components/esp_phy/esp32/include -I/opt/esp/idf/components/esp_netif/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/workspaces/TANK=. -fmacro-prefix-map=/opt/esp/idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/__/motor_control.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/__/motor_control.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/__/motor_control.c.obj -c /workspaces/TANK/motor_control.c
/workspaces/TANK/motor_control.c: In function 'is_in_deadzone':
/workspaces/TANK/motor_control.c:18:12: warning: unused variable 'abs_y' [-Wunused-variable]
   18 |     int8_t abs_y = (input_y < 0) ? -input_y : input_y;
      |            ^~~~~
/workspaces/TANK/motor_control.c:17:12: warning: unused variable 'abs_x' [-Wunused-variable]
   17 |     int8_t abs_x = (input_x < 0) ? -input_x : input_x;
      |            ^~~~~
/workspaces/TANK/motor_control.c:20:1: error: control reaches end of non-void function [-Werror=return-type]
   20 | }
      | ^
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
